[gd_scene load_steps=2 format=3 uid="uid://b5dj4e3qdd2f6"]

[ext_resource type="Script" uid="uid://bniolhgkcwsnj" path="res://room/room.gd" id="1_ppkfq"]

[node name="Room" type="Area2D" node_paths=PackedStringArray("texture_polygon", "nav_region", "nav_agent", "connectors_node", "polygon", "all_room_shapes", "raycast") groups=["Room"]]
script = ExtResource("1_ppkfq")
texture_polygon = NodePath("TexturePolygon")
nav_region = NodePath("NavigationRegion2D")
nav_agent = NodePath("Node2D/NavigationAgent2D")
connectors_node = NodePath("Connectors")
polygon = NodePath("Polygon")
all_room_shapes = NodePath("AllRoomShapes")
raycast = NodePath("RayCast2D")

[node name="Polygon" type="CollisionPolygon2D" parent="."]

[node name="TexturePolygon" type="Polygon2D" parent="."]
color = Color(0.884932, 0.78636, 0.391851, 1)
uv = PackedVector2Array(-472, -25, -221, -28, -235, 58)

[node name="AllRoomShapes" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="LShapePolygon" type="CollisionPolygon2D" parent="AllRoomShapes"]
visible = false
polygon = PackedVector2Array(-64, -64, 64, -64, 64, 0, 0, 0, 0, 64, -64, 64)

[node name="SquareShapePolygon" type="CollisionPolygon2D" parent="AllRoomShapes"]
visible = false
polygon = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[node name="BigSquareShapePolygon" type="CollisionPolygon2D" parent="AllRoomShapes"]
visible = false
polygon = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)

[node name="LongHallwayShapePolygon" type="CollisionPolygon2D" parent="AllRoomShapes"]
visible = false
polygon = PackedVector2Array(-192, -16, -192, 16, 192, 16, 192, -16)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]

[node name="Node2D" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Node2D"]

[node name="Connectors" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
collide_with_areas = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
